apps/workloads/deadair/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deadair
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
